--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	<a href="quiz.html">Quiz</a>
     </nav>
 
-    <section id="Viața timpurie">
+    <section id="Biografie">
         <h2>Viața timpurie</h2>
         <p>Arnold Schwarzenegger s-a născut la data de 30 iulie 1947 în Thal, Austria. A fost un culturist de succes, actor și politician.</p>
     </section>
