--- a/atestat.html
+++ b/atestat.html
@@ -81,7 +81,7 @@
     </nav>
 
     <section id="Biografie">
-        <h2>Viața timpurie</h2>
+        <h2>Biografie</h2>
         <p>Arnold Schwarzenegger s-a născut la data de 30 iulie 1947 în Thal, Austria. A fost un culturist de succes, actor și politician.</p>
     </section>
 
